--- a/Introduction to Deep Learning & Neural Networks with Keras/Regression Models.ipynb
+++ b/Introduction to Deep Learning & Neural Networks with Keras/Regression Models.ipynb
@@ -16,7 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip -q install keras\n",
+    "!pip -q install pandas\n",
+    "!pip -q install numpy\n",
+    "!pip -q install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
